Removed some old stuff. Moved servo.h to a shared src folder. Added some xarco macros to the al5d urdf. Tried adding collisions to the al5d urdf.

--- a/robotarminterface/CMakeLists.txt
+++ b/robotarminterface/CMakeLists.txt
@@ -41,7 +41,7 @@ add_executable(robotarm_interface_node
    src/MotionControl.cpp
    src/SerialControl.cpp
    src/RosCommunication.cpp
-   src/Servo.hpp
+   ../shared/src/Servo.hpp
    src/SmartQueue.hpp
 ) 
 
