--- a/shared/config/servo_config.yaml
+++ b/shared/config/servo_config.yaml
@@ -1,10 +1,10 @@
-- topics:
-  - test: kaas
-  - test2: kaas2
-- servos: 
-  - [0, "base", -90, 90, 640, 2360,-90, 90, 0.22,true]
-  - [1, "shoulder", 0, 120, 500, 1900, 0, 120, 0.19,false]
-  - [2, "elbow", -135, 0, 700, 1920 , -135, 0, 0.28,true]
-  - [3, "wrist", -90, 90, 500, 2500, -90, 90, 0.24,false]
-  - [4, "gripper", -90, 90, 700, 2400, -90, 90, 0.16,false]
-  - [5, "wrist_rotate", -90, 90, 700, 2400, -90, 90, 0.16,false]
+topics:
+  test: kaas
+  test2: kaas2
+servos: 
+  base: [0, "base", -90, 90, 640, 2360,-90, 90, 0.22,true]
+  shoulder: [1, "shoulder", 0, 120, 500, 1900, 0, 120, 0.19,false]
+  elbow: [2, "elbow", -135, 0, 700, 1920 , -135, 0, 0.28,true]
+  wrist: [3, "wrist", -90, 90, 500, 2500, -90, 90, 0.24,false]
+  gripper: [4, "gripper", -90, 90, 700, 2400, -90, 90, 0.16,false]
+  wrist_rotate: [5, "wrist_rotate", -90, 90, 700, 2400, -90, 90, 0.16,false]
