--- a/shared/config/servo_config.yaml
+++ b/shared/config/servo_config.yaml
@@ -8,3 +8,5 @@ servos:
   wrist: [3, "wrist", -90, 90, 500, 2500, -90, 90, 0.24,false]
   gripper: [4, "gripper", -90, 90, 700, 2400, -90, 90, 0.16,false]
   wrist_rotate: [5, "wrist_rotate", -90, 90, 700, 2400, -90, 90, 0.16,false]
+sim_servos:
+  gripper: [-0.02, 0.02] 
