Added a class for handling the simulations different joint types. Added copy and assignment constructors to the Servo class. Added joint type parameter to the servo config.

--- a/shared/config/servo_config.yaml
+++ b/shared/config/servo_config.yaml
@@ -9,4 +9,4 @@ servos:
   gripper: [4, "gripper", -90, 90, 700, 2400, -90, 90, 0.16,false]
   wrist_rotate: [5, "wrist_rotate", -90, 90, 700, 2400, -90, 90, 0.16,false]
 sim_servos:
-  gripper: [-0.02, 0.02] 
+  gripper: [3, -0.02, 0.02] 
