Added message for a topic where in the future feedback of the ssc32u commands can be published. Changed robotarminterface ssc32u_topic message type to robotsimulation/ssc32u_topic from std_msgs/String. Added flag to MotionControl that indicates if it has to wait for feedback. (If no serial port is connected) Refracterd some code. Changed most of the std::cout's to ROS_INFO/ROS_WARN/ROS_ERROR/ROS_DEBUG.

--- a/robotarminterface/CMakeLists.txt
+++ b/robotarminterface/CMakeLists.txt
@@ -6,6 +6,7 @@ find_package(catkin REQUIRED COMPONENTS
    rospy
    std_msgs
    message_generation
+   robotsimulation
 )
 
 find_package(Boost REQUIRED COMPONENTS system thread)
@@ -28,7 +29,6 @@ add_service_files(
 
 generate_messages(
    DEPENDENCIES
-   std_msgs
    robotarminterface
  )
 
