--- a/robotarminterface/package.xml
+++ b/robotarminterface/package.xml
@@ -14,10 +14,12 @@
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>Boost</build_depend>
+  <build_depend>robotsimulation</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>message_runtime</run_depend>
   <run_depend>Boost</run_depend>
+  <run_depend>robotsimulation</run_depend>
 </package>
