Changed beker_node to virtual_cup_node in cmake and launch file. Added detection when tf can't keep up. (Skipping a frame in that case). Removed debug marker. Added velocity and acceleration calculations. Cupdata now gets published. Verified rqt_plot working with a cup. Made cup nodes have unique names so more cups can be simulated at the same time. Added a extra state for when the cup is tipped over (and has spilled its content). TODO: implement tipping behaviour in collision detection?

--- a/robotsimulation/CMakeLists.txt
+++ b/robotsimulation/CMakeLists.txt
@@ -44,7 +44,7 @@ add_executable(ssc32u_controller_node
 	src/ssc32u_parser_node.cpp 
 	src/ssc32u_parser_interface.cpp
 	src/ssc32u_parser_to_jointstate.cpp)
-add_executable(beker_node 
+add_executable(virtual_cup_node 
 	src/virtual_cup_node.cpp
 	src/virtual_cup.cpp
 	src/virtual_cup_interface.cpp)
@@ -52,7 +52,7 @@ add_executable(beker_node
 
 add_dependencies(cli_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 add_dependencies(ssc32u_controller_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-add_dependencies(beker_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(virtual_cup_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 target_link_libraries(cli_node
   ${catkin_LIBRARIES}
@@ -62,6 +62,6 @@ target_link_libraries(ssc32u_controller_node
   ${catkin_LIBRARIES}
 )
 
-target_link_libraries(beker_node
+target_link_libraries(virtual_cup_node
   ${catkin_LIBRARIES}
 )
