Fixed rotation in motion planner so wrist now rotates relative to the base rotation. Added debug markers for the robotvision node. Robotvision node now tries to get a loaded image if the camera frame is not opened. Added function for sending debug marker message. Added a converted radius from pixels to real life. Added test images for robotvision. Added visualisation messages to cmake.

--- a/robotvision/CMakeLists.txt
+++ b/robotvision/CMakeLists.txt
@@ -9,6 +9,8 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
   message_generation
+  sensor_msgs
+  visualization_msgs
   geometry_msgs
   robotarminterface
   robotapplication
